Name:                vault
Version:             0.1.0
Description:         vault
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          Vincent Hanquez <vincent@snarc.org>
Synopsis:            vaulture
Build-Type:          Simple
Category:            Network
stability:           experimental
Cabal-Version:       >=1.6
Homepage:            http://github.com/vincenthz/vault
Data-files:          README.md

executable         vault
  Main-is:         CLI.hs
  Build-Depends:   base >= 3 && < 5
                 , bytestring
                 , byteable
                 , cryptonite
                 , optparse-applicative
                 , directory
                 , unix
                 , utf8-string
